# odin-data

./: .clang-format  .clang-format-ignore  .codecov.yml  .cproject  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitremotes  .log4cxx.0.10.0.patch  .project  .travis-install-blosc.sh  .travis-install-excalibur.sh  .travis-install-hdf5.sh  .travis-install-librdkafka.sh  .travis-install-log4cxx.sh  .travis.yml  CMakeLists.txt  Dockerfile  Live View Requirements.md  README.git-blame  README.git-hooks  README.md  build  log4cxx.xml  switcher.json
common/include/: CMakeLists.txt  ClassLoader.h  DebugLevelLogger.h  DummyUDPDefinitions.h  IVersionedObject.h  IpcChannel.h  IpcMessage.h  IpcReactor.h  Json.h  OdinDataException.h  SegFaultHandler.h  SharedBufferManager.h  gettime.h  logging.h  stringparse.h  version.h.in
common/src/: CMakeLists.txt  IpcChannel.cpp  IpcMessage.cpp  IpcReactor.cpp  Json.cpp  SharedBufferManager.cpp  logging.cpp
cpp/: CMakeLists.txt
cpp/cmake/: CMakeLists.txt  CodeCoverage.cmake  FindBlosc.cmake  FindZEROMQ.cmake
cpp/common/: CMakeLists.txt
cpp/config/: CMakeLists.txt  README.md  fp_test_config.json  fr_excalibur1.config  fr_excalibur1.json  fr_excalibur2.config  fr_log4cxx.xml  fr_test_osx.config  fs_log4cxx.xml
cpp/doc/: CMakeLists.txt  conf.py  sphinx.yaml
cpp/frameProcessor/: CMakeLists.txt  README.md
cpp/test/: CMakeLists.txt  test_rewind.cpp
frameProcessor/include/: Acquisition.h  BloscPlugin.h  CMakeLists.txt  CallDuration.h  DataBlock.h  DataBlockFrame.h  DataBlockPool.h  DummyPlugin.h  DummyUDPProcessPlugin.h  EigerProcessPlugin.h  EndOfAcquisitionFrame.h  ExcaliburReorderPlugin.h  FileWriter.h  FileWriterController.h  FileWriterPlugin.h  Frame.h  FrameMetaData.h  FrameProcessorApp.h  FrameProcessorController.h  FrameProcessorDefinitions.h  FrameProcessorPlugin.h  GapFillPlugin.h  HDF5File.h  HDF5FileWriter.h  IFrame.h  IFrameCallback.h  IFrameMetaData.h  KafkaProducerPlugin.h  LiveViewPlugin.h  MetaMessage.h  OffsetAdjustmentPlugin.h  ParameterAdjustmentPlugin.h  PercivalProcessPlugin.h  SharedBufferFrame.h  SharedMemoryController.h  SumPlugin.h  UIDAdjustmentPlugin.h  WatchdogTimer.h  WorkQueue.h
frameProcessor/src/: Acquisition.cpp  BloscPlugin.cpp  CMakeLists.txt  DataBlock.cpp  DataBlockFrame.cpp  DataBlockPool.cpp  DummyPlugin.cpp  DummyUDPProcessPlugin.cpp  DummyUDPProcessPluginLib.cpp  EigerProcessPlugin.cpp  EndOfAcquisitionFrame.cpp  ExcaliburReorderPlugin.cpp  FileWriter.cpp  FileWriterController.cpp  FileWriterPlugin.cpp  FileWriterTest.cpp  Frame.cpp  FrameMetaData.cpp  FrameProcessorApp.cpp  FrameProcessorController.cpp  FrameProcessorPlugin.cpp  FrameProcessorTest.cpp  GapFillPlugin.cpp  GapFillPluginLib.cpp  HDF5File.cpp  HDF5FileWriter.cpp  IFrame.cpp  IFrameCallback.cpp  IFrameMetaData.cpp  KafkaProducerPlugin.cpp  KafkaProducerPluginLib.cpp  LiveViewPlugin.cpp  LiveViewPluginLib.cpp  MetaMessage.cpp  MetaMessagePublisher.cpp  MetaMessageUnitTest.cpp  OffsetAdjustmentPlugin.cpp  OffsetAdjustmentPluginLib.cpp  ParameterAdjustmentPlugin.cpp  PercivalProcessPlugin.cpp  (+9 more)
frameProcessor/test/: BloscPluginTest.cpp  CMakeLists.txt  FrameProcessorTest.cpp  FrameProcessorUnitTestMain.cpp  GapFillPluginTest.cpp  KafkaProducerPluginTest.cpp  LiveViewUnitTest.cpp  TestHelperFunctions.h
frameReceiver/src/: CMakeLists.txt  DummyFrameDecoderUDP.cpp  DummyUDPFrameDecoder.cpp  DummyUDPFrameDecoderLib.cpp  DumyFrameDecoderUDP.cpp  ExcaliburFrameDecoder.cpp  ExcaliburFrameDecoderLib.cpp  FrameDecoder.cpp  FrameReceiverApp.cpp  FrameReceiverController.cpp  FrameReceiverRxThread.cpp  FrameReceiverUDPRxThread.cpp  FrameReceiverZMQRxThread.cpp  PercivalEmulatorFrameDecoder.cpp  PercivalEmulatorFrameDecoderLib.cpp  appMain.cpp
frameReceiver/test/: CMakeLists.txt  FrameReceiverConfigUnitTest.cpp  FrameReceiverRxThreadUnitTest.cpp  FrameReceiverUDPRxThreadUnitTest.cpp  FrameReceiverUnitTestMain.cpp  IpcChannelUnitTest.cpp  IpcMessageUnitTest.cpp  IpcReactorUnitTest.cpp  SharedBufferManagerUnitTest.cpp
frameSimulator/src/: CMakeLists.txt  DummyUDPFrame.cpp  DummyUDPFrameSimulatorPlugin.cpp  FrameSimulatorApp.cpp  FrameSimulatorOption.cpp  FrameSimulatorOptions.cpp  FrameSimulatorPlugin.cpp  FrameSimulatorPluginUDP.cpp  Packet.cpp  UDPFrame.cpp  pcapFrameSimulatorPlugin.cpp
python/: .pylintrc  MANIFEST.in  README.md  odin_server.cfg  pyproject.toml  setup.cfg  setup.py
python/tests/: test_control.py  test_ctrl_client.py  test_frame_processor_adapter.py  test_frame_receiver_adapter.py  test_hdf5dataset.py  test_ipc_channel.py  test_ipc_client.py  test_ipc_message.py  test_ipc_tornado_channel.py  test_ipc_tornado_client.py  test_ipc_tornao_channel.py  test_live_view_proxy.py  test_meta_listener_adapter.py  test_meta_writer.py  test_metawriter.py  test_odin_data_adapter.py  test_odin_data_controller.py  test_shared_buffer_manager.py  test_util.py
src/: CMakeLists.txt  ExcaliburFrameDecoder.cpp  FrameReceiverApp.cpp  FrameReceiverRxThread.cpp  IpcChannel.cpp  IpcMessage.cpp  IpcReactor.cpp  PercivalEmulatorFrameDecoder.cpp  SharedBufferManager.cpp  appMain.cpp
test/: CMakeLists.txt  FrameDecoderUnitTest.cpp  FrameReceiverConfigUnitTest.cpp  FrameReceiverRxThreadUnitTest.cpp  FrameReceiverUnitTestMain.cpp  IpcChannelUnitTest.cpp  IpcMessageTest.cpp  IpcReactorUnitTest.cpp  SharedBufferManagerUnitTest.cpp  test_rewind.cpp
test/integrationTest/: CMakeLists.txt  README.md
test/integrationtest/: CMakeLists.txt  run_integration_test.py
test/unittest/: CMakeLists.txt  FrameDecoderUnitTest.cpp  FrameReceiverConfigUnitTest.cpp  FrameReceiverRxThreadUnitTest.cpp  IpcChannelUnitTest.cpp  IpcMessageUnitTest.cpp  IpcReactorUnitTest.cpp  SharedBufferManagerUnitTest.cpp
tools/: CMakeLists.txt
tools/client/: CMakeLists.txt  framenotifier_app.cpp  framenotifier_data.h
tools/filewriter/: CMakeLists.txt  ClassLoader.h  DataBlock.cpp  DataBlock.h  DataBlockPool.cpp  DataBlockPool.h  Design.md  DummyPlugin.cpp  DummyPlugin.h  ExcaliburReorderPlugin.cpp  ExcaliburReorderPlugin.h  FileWriter.cpp  FileWriter.h  Frame.cpp  (+28 more)
(+4050 files in other folders)
