[metadata]
name = odin-data
description = ODIN Data Framework
url = https//github.com/odin-detector/odin-data
author = Tim Nicholls
author_email = tim.nicholls@stfc.ac.uk
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src

install_requires =
    odin-control
    posix_ipc>=1.0.4
    pysnmp>=4.4.4
    numpy>=1.14.0
    h5py>=2.9.0
    pyzmq>=17.1.0
    pygelf>=0.3.5

[options.extras_require]
# For development tests/docs
dev =
    pytest-asyncio

[options.packages.find]
where = src

[options.entry_points]
# Include a command line script
console_scripts =
    frame_receiver_client = odin_data.frame_receiver.client:main
    meta_writer = odin_data.meta_writer.meta_writer_app:main

[flake8]
max-line-length = 100

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    ./
    **/site-packages/

[versioneer]
VCS = git
style = pep440
versionfile_source = src/odin_data/_version.py
versionfile_build = odin_data/_version.py
tag_prefix=
